# hardware

hardware_msgs/: CMakeLists.txt  package.xml
hardware_msgs/msg/: GlobalOdometry.msg  IRDists.msg  Odometry.msg
ir_sensors/: CMakeLists.txt  package.xml
ir_sensors/config/: paramsens.yaml
ir_sensors/launch/: ir_sensors.launch
ir_sensors/src/: IRSensors.cpp  IRSensors.hpp  sensor.cpp  sensor.hpp
odometry/: CMakeLists.txt  package.xml
odometry/launch/: odometry.launch
odometry/src/: odometry.cpp  odometry.hpp
